--- a/courses/pubspec.yaml
+++ b/courses/pubspec.yaml
@@ -15,12 +15,14 @@ dependencies:
   firebase_core: ^1.19.1
   flutter:
     sdk: flutter
+  flutter_quill: ^5.0.4
   fluttertoast: ^8.0.9
   get_it: ^7.2.0
   go_router: ^4.1.0
   google_fonts: ^3.0.1
   intl: ^0.17.0
   provider: ^6.0.3
+  tuple: ^2.0.0
   
 
 dev_dependencies:
