--- a/courses/pubspec.yaml
+++ b/courses/pubspec.yaml
@@ -11,12 +11,15 @@ dependencies:
   cached_network_image: ^3.2.1
   cloud_firestore: ^3.2.1
   drag_and_drop_lists: ^0.3.2+2
+  file_picker: ^5.0.1
   firebase_auth: ^3.4.1
   firebase_core: ^1.19.1
+  firebase_storage: ^10.3.4
   flutter:
     sdk: flutter
   flutter_quill: ^5.0.4
   fluttertoast: ^8.0.9
+  font_awesome_flutter: ^10.1.0
   get_it: ^7.2.0
   go_router: ^4.1.0
   google_fonts: ^3.0.1
